--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js" defer></script>
     <script src="./js/index.js" defer></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js" defer></script>
-    <script src="https://yastatic.net/jquery/3.3.1/jquery.js" defer></script>
+    <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
     <script src="./js/banner.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest" defer></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js" defer></script>
@@ -135,7 +135,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_l">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/stats.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#stats">
+                        </svg>
                     </div>
                     <h3 class="card-title">Еженедельный отчет по расходам ресурсов</h3>
                 </div>
@@ -151,7 +153,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/key.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#key">
+                        </svg>
                     </div>
                     <h3 class="card-title">Дверь открыта</h3>
                 </div>
@@ -165,7 +169,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/robot-cleaner.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#robot-cleaner">
+                        </svg>
                     </div>
                     <h3 class="card-title">Уборка закончена</h3>
                 </div>
@@ -179,7 +185,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/router.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#router">
+                        </svg>
                     </div>
                     <h3 class="card-title">Новый пользователь</h3>
                 </div>
@@ -193,7 +201,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/thermal.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#thermal">
+                        </svg>
                     </div>
                     <h3 class="card-title">Изменен климатический режим</h3>
                 </div>
@@ -214,7 +224,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m critical">
                 <div class="card-heading heading-critical">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/ac.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#ac">
+                        </svg>
                     </div>
                     <h3 class="card-title">Невозможно включить кондиционер</h3>
                 </div>
@@ -228,7 +240,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/music.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#music">
+                        </svg>
                     </div>
                     <h3 class="card-title">Музыка включена</h3>
                 </div>
@@ -239,7 +253,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 <p class="card-description card-description_big description_critical">Сейчас проигрывается:</p><div class="card-data card-data_music">
 
                 <div class="song-area">
-                    <div class="cover-wrap">
+                    <div class="cover-wrap">                        
                         <img class="cover" src="img/avatar.jpg">
                     </div>
 
@@ -253,10 +267,14 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 </div>
                 <div class="player-controls">
                     <button class="player-control player-control_prev">
-                        <img src="img/Prev.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#Prev">
+                        </svg>
                     </button>
                     <button class="player-control player-control_next">
-                        <img src="img/Prev.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#Next">
+                        </svg>
                     </button>
 
                     <input type="range" class="volume-range" name="volume-range" min="0" max="100" value="50" step="1">
@@ -271,7 +289,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/fridge.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#fridge">
+                        </svg>
                     </div>
                     <h3 class="card-title">Заканчивается молоко</h3>
                 </div>
@@ -297,7 +317,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/battery.svg">
+                        <svg class="card-icon">
+                            <use xlink:href="img/sprite.svg#battery">
+                        </svg>
                     </div>
                     <h3 class="card-title">Зарядка завершена</h3>
                 </div>
@@ -313,7 +335,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                     <div class="card-icon-wrap">
                         <div id="carousel">
                             <div class="carousel-element">
-                                <img class="card-icon" src="img/cam.svg">
+                                <svg class="card-icon">
+                                    <use xlink:href="img/sprite.svg#cam">
+                                </svg>
                             </div>
                         </div>
                     </div>
@@ -334,7 +358,9 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 <div class="card card_size_s" style="border-radius: 22px;">
                     <div class="card-heading">
                         <div class="card-icon-wrap">
-                            <img class="card-icon" src="img/battery.svg">
+                            <svg class="card-icon">
+                                <use xlink:href="img/sprite.svg#battery">
+                            </svg>
                         </div>
                         <h3 class="card-title">Зарядка завершена</h3>
                     </div>
