--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_l">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="23px">
                             <use xlink:href="img/sprite.svg#stats">
                         </svg>
                     </div>
@@ -153,7 +153,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="45px">
                             <use xlink:href="img/sprite.svg#key">
                         </svg>
                     </div>
@@ -169,7 +169,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="29px">
                             <use xlink:href="img/sprite.svg#robot-cleaner">
                         </svg>
                     </div>
