--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="41px">
+                        <svg class="card-icon" width="40px" height="48px">
                             <use xlink:href="img/sprite.svg#music">
                         </svg>
                     </div>
@@ -289,7 +289,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="39px">
+                        <svg class="card-icon" width="39px" height="48px">
                             <use xlink:href="img/sprite.svg#fridge">
                         </svg>
                     </div>
