--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- scripts -->    
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" defer></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" defer></script>
-    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js" defer></script>
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js" defer></script>
     <script src="./js/index.js" defer></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js" defer></script>
-    <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+    <script src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
     <script src="./js/banner.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest" defer></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js" defer></script>
