--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_l">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="23px">
                             <use xlink:href="img/sprite.svg#stats">
                         </svg>
                     </div>
@@ -153,7 +153,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="45px">
                             <use xlink:href="img/sprite.svg#key">
                         </svg>
                     </div>
@@ -169,7 +169,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="29px">
                             <use xlink:href="img/sprite.svg#robot-cleaner">
                         </svg>
                     </div>
@@ -185,7 +185,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="46px">
                             <use xlink:href="img/sprite.svg#router">
                         </svg>
                     </div>
@@ -201,7 +201,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="48px">
                             <use xlink:href="img/sprite.svg#thermal">
                         </svg>
                     </div>
@@ -224,7 +224,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m critical">
                 <div class="card-heading heading-critical">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="41px">
                             <use xlink:href="img/sprite.svg#ac">
                         </svg>
                     </div>
@@ -267,12 +267,12 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 </div>
                 <div class="player-controls">
                     <button class="player-control player-control_prev">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="53px" height="52px">
                             <use xlink:href="img/sprite.svg#Prev">
                         </svg>
                     </button>
                     <button class="player-control player-control_next">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="53px" height="52px">
                             <use xlink:href="img/sprite.svg#Prev">
                         </svg>
                     </button>
@@ -317,7 +317,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon">
+                        <svg class="card-icon" width="48px" height="25px">
                             <use xlink:href="img/sprite.svg#battery">
                         </svg>
                     </div>
@@ -335,7 +335,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                     <div class="card-icon-wrap">
                         <div id="carousel">
                             <div class="carousel-element">
-                                <svg class="card-icon">
+                                <svg class="card-icon" width="48px" height="36px">
                                     <use xlink:href="img/sprite.svg#cam">
                                 </svg>
                             </div>
@@ -358,7 +358,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 <div class="card card_size_s" style="border-radius: 22px;">
                     <div class="card-heading">
                         <div class="card-icon-wrap">
-                            <svg class="card-icon">
+                            <svg class="card-icon" width="48px" height="25px">
                                 <use xlink:href="img/sprite.svg#battery">
                             </svg>
                         </div>
