added icons width

--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 </div>
                 <div class="player-controls">
                     <button class="player-control player-control_prev">
-                        <svg class="card-icon" width="53px" height="52px">
+                        <svg width="53px" height="52px">
                             <use xlink:href="img/sprite.svg#Prev">
                         </svg>
                     </button>
                     <button class="player-control player-control_next">
-                        <svg class="card-icon" width="53px" height="52px">
+                        <svg width="53px" height="52px">
                             <use xlink:href="img/sprite.svg#Prev">
                         </svg>
                     </button>
