--- a/index.html
+++ b/index.html
@@ -135,9 +135,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_l">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="23px">
-                            <use xlink:href="img/sprite.svg#stats">
-                        </svg>
+                        <img class="card-icon" src="img/stats.svg">
                     </div>
                     <h3 class="card-title">Еженедельный отчет по расходам ресурсов</h3>
                 </div>
@@ -153,9 +151,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="45px">
-                            <use xlink:href="img/sprite.svg#key">
-                        </svg>
+                        <img class="card-icon" src="img/key.svg">
                     </div>
                     <h3 class="card-title">Дверь открыта</h3>
                 </div>
@@ -169,9 +165,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="29px">
-                            <use xlink:href="img/sprite.svg#robot-cleaner">
-                        </svg>
+                        <img class="card-icon" src="img/robot-cleaner.svg">
                     </div>
                     <h3 class="card-title">Уборка закончена</h3>
                 </div>
@@ -185,9 +179,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="46px">
-                            <use xlink:href="img/sprite.svg#router">
-                        </svg>
+                        <img class="card-icon" src="img/router.svg">
                     </div>
                     <h3 class="card-title">Новый пользователь</h3>
                 </div>
@@ -201,9 +193,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="48px">
-                            <use xlink:href="img/sprite.svg#thermal">
-                        </svg>
+                        <img class="card-icon" src="img/thermal.svg">
                     </div>
                     <h3 class="card-title">Изменен климатический режим</h3>
                 </div>
@@ -224,9 +214,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m critical">
                 <div class="card-heading heading-critical">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="41px">
-                            <use xlink:href="img/sprite.svg#ac">
-                        </svg>
+                        <img class="card-icon" src="img/ac.svg">
                     </div>
                     <h3 class="card-title">Невозможно включить кондиционер</h3>
                 </div>
@@ -240,9 +228,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="40px" height="48px">
-                            <use xlink:href="img/sprite.svg#music">
-                        </svg>
+                        <img class="card-icon" src="img/music.svg">
                     </div>
                     <h3 class="card-title">Музыка включена</h3>
                 </div>
@@ -253,8 +239,8 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 <p class="card-description card-description_big description_critical">Сейчас проигрывается:</p><div class="card-data card-data_music">
 
                 <div class="song-area">
-                    <div class="cover-wrap">                        
-                        <img class="cover" src="img/avatar.jpg">
+                    <div class="cover-wrap">
+                        <img class="cover" src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m1000x1000">
                     </div>
 
                     <div class="song-data">
@@ -267,14 +253,10 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 </div>
                 <div class="player-controls">
                     <button class="player-control player-control_prev">
-                        <svg width="53px" height="52px">
-                            <use xlink:href="img/sprite.svg#Prev">
-                        </svg>
+                        <img src="img/Prev.svg">
                     </button>
                     <button class="player-control player-control_next">
-                        <svg width="53px" height="52px">
-                            <use xlink:href="img/sprite.svg#Prev">
-                        </svg>
+                        <img src="img/Prev.svg">
                     </button>
 
                     <input type="range" class="volume-range" name="volume-range" min="0" max="100" value="50" step="1">
@@ -289,9 +271,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="39px" height="48px">
-                            <use xlink:href="img/sprite.svg#fridge">
-                        </svg>
+                        <img class="card-icon" src="img/fridge.svg">
                     </div>
                     <h3 class="card-title">Заканчивается молоко</h3>
                 </div>
@@ -317,9 +297,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <svg class="card-icon" width="48px" height="25px">
-                            <use xlink:href="img/sprite.svg#battery">
-                        </svg>
+                        <img class="card-icon" src="img/battery.svg">
                     </div>
                     <h3 class="card-title">Зарядка завершена</h3>
                 </div>
@@ -335,9 +313,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                     <div class="card-icon-wrap">
                         <div id="carousel">
                             <div class="carousel-element">
-                                <svg class="card-icon" width="48px" height="36px">
-                                    <use xlink:href="img/sprite.svg#cam">
-                                </svg>
+                                <img class="card-icon" src="img/cam.svg">
                             </div>
                         </div>
                     </div>
@@ -358,9 +334,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 <div class="card card_size_s" style="border-radius: 22px;">
                     <div class="card-heading">
                         <div class="card-icon-wrap">
-                            <svg class="card-icon" width="48px" height="25px">
-                                <use xlink:href="img/sprite.svg#battery">
-                            </svg>
+                            <img class="card-icon" src="img/battery.svg">
                         </div>
                         <h3 class="card-title">Зарядка завершена</h3>
                     </div>
